7-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
        - name: employee-api
          image: saurabhgupta98989/nagp-employee-be:latest
          ports:
            - containerPort: 8080
