8-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-backend
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
        - name: employee-api
          image: saurabhgupta98989/nagp-employee-be:0.0.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /config/
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: app-config
