8-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-backend
spec:
  selector:
    app: employee
  ports:
    - port: 80
      targetPort: 8080
