10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: employee.35.200.192.126.nip.io
      http:
        paths:
          - path: /nagp-employee-be
            pathType: Prefix
            backend:
              service:
                name: employee-backend
                port:
                  number: 80
